alpha-app/workloads/development/spring-be/deployment-changes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-be
  namespace: riag-tech-alpha-team-alpha-app
spec:
  template:
    spec:
      containers:
      - name: spring-be
        image: riag.jfrog.io/docker-virtual/application-platform/development/riag/tech/platforms/alpha-team/alpha-app/spring-be
    metadata:
      annotations:
        vault.hashicorp.com/agent-pre-populate: 'true'
        vault.hashicorp.com/agent-init-first: 'true'
        vault.hashicorp.com/agent-inject: 'true'
        vault.hashicorp.com/agent-pre-populate-only: 'true'
        vault.hashicorp.com/agent-configmap: vault-injector-config-spring-be
        vault.hashicorp.com/service: https://vault.development.cloud.riag.digital
