alpha-app/workloads/development/spring-be/virtualservice-changes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-be-vs
  namespace: riag-tech-alpha-team-alpha-app
spec:
  hosts:
    - platform.development.cloud.riag.digital
